# gr5069-homework-2-AmeliaHZW

AmazonFashion/: CONTRIBUTING.md  LICENSE  README.md
AmazonFashion/src/AmazonFashion/: AmazonFashion.py
AmazonFashion/src/code/: AmazonFashion.py
AmazonFashion/tests/: test_AmazonFashion.py
Final_Project/: API_env  Amazon_UK.ipynb  Demo.ipynb  Demo_AmazonFashion.ipynb  Kroger.ipynb  Proposal.ipynb  README.md  Tiktok.ipynb  TravelerWeather.ipynb
Final_Project/AmazonFashion/: CHANGELOG.md  pyproject.toml
Final_Project/AmazonFashion/src/AmazonFashion/: __init__.py
